tests/errors/test_24.x
// inappropriate use of the '$' operator:w


fn main() -> int {

    let $: int = 21;


    loop i in 10 {
        outInt($);
    }

}